# libartpalette-ndk

./: README.md
cmake/: CMakeLists.txt  CMakeListsConan.txt
